mengubah column hero serta gambar about

--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
     <section
       class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center"
     >
-      <div class="container d-flex gap-5 justify-content-center align-items-center">
-        <div class="img">
+      <div class="container d-flex row gap-5 justify-content-center align-items-center">
+        <div class="img col-lg-3 col-md-6 col-sm-12">
           <img src="iniAsset/aska.jpg" alt="Owner" class="rounded-circle" style="width: 250px;">
         </div>
-        <div class="textHero">
+        <div class="textHero col-lg-3 col-md-6 col-sm-12">
           <div class="wrapper">
             <span id="typewriter" data-array=""></span>
             <span class="cursor"></span>
@@ -107,7 +107,7 @@
 
     <section class="home jumbotron text-center" id="home">
       <img
-        src="iniAsset/aska.JPG"
+        src="iniAsset/aska.jpg"
         alt="Aksajreno FH"
         width="150"
         class="rounded-circle img-thumbnail"
